kubernetes-debugging/kit/deploy_/net-policy-calico.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-iperf3-traffic
spec:
  selector: app == 'iperf3'
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      source:
        selector: app == 'iperf3'
    - action: Log

  egress:
    - action: Allow
      destination:
        selector: app == 'iperf3'
        ports: 
          - 5201
      protocol: TCP
    - action: Log
