kubernetes-debugging/kit/deploy_/net-policy-native.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-iperf3-traffic-only
spec:
  podSelector:
    matchLabels:
      app: iperf3
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: iperf3
  - {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: iperf3
    ports:
    - protocol: TCP
      port: 5202
  - {}
